Tue Nov 06 13:54:13 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/highlight.py: Highlighter works with stemmed and unstemmed
	  terms. Workaround until we have proper phrase highlighting

Thu Nov 01 14:43:34 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/win32msvc.tgz: Updated build files for windows.

Wed Oct 31 19:01:03 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/xapian-bindings-xappy.tgz: Version with a concurrency
	  problem fixed.

Wed Oct 31 17:57:00 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/matchspy.cc: Version of matchspy.cc with quick workaround to
	  avoid segfault.

Tue Oct 30 11:12:28 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Document the members of SearchResult.

Tue Oct 30 11:02:22 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add weight and percent members to
	  SearchResult objects.

Mon Oct 29 21:21:27 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* README: Update to tell users to use the tarballs from the libs/
	  subdirectory.

Mon Oct 29 21:19:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Fix setting of the prefix to use the correct form of add_prefix,
	  and fix the expected output of scale weight queries to use the
	  new style of output.

Mon Oct 29 20:19:27 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/win32msvc.tgz,libs/xapian-bindings-xappy.tgz,
	  libs/xapian-core-xappy.tgz: Add tarballs containing a suitable
	  version of xapian to use with xappy.

Mon Oct 29 15:07:00 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py: Turn off the max_mem_use setting by
	  default, so we don't mess up performance of existing applications.

Mon Oct 29 14:59:26 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
