@@ -1,3 +1,9 @@
+Wed Nov 07 17:30:02 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/highlight.py: Fix tests to correspond to recent change.
+	* xappy/searchconnection.py: Add "query_none()" to get an empty
+	  query explicitly.  Can be useful as a placeholder.
+
 Tue Nov 06 13:54:13 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>
 
 	* xappy/highlight.py: Highlighter works with stemmed and unstemmed
